sites/all/themes/occupy/css/global.css
/*-------------------"OCCUPY" THEME BASED ON OMEGA, BUILT BY Joel Moore (banghouse)----------------*/
/*---------------------------From Designs by Thiago de Mello Bueno---------------------------------*/

 
/*--------------------------------------------TYPOGRAPHY-------------------------------------------*/

h1, h2, h3, h4{
	font-family: 'LeagueGothicRegular';	
	font-weight: normal;
	text-transform: uppercase;
}
h1 {
	font-size: 40px;
}

h2 {
	font-size: 33px;
}

h3 {
	font-size: 27px;
}
h4 {
	font-size: 23px;
}

h5 {
	font-size: 14px;
	font-family: 'PTSansRegular';
   font-weight: bold;
}
h6 {
	font-size: 11px;
	font-weight: normal;
}
p, div {
    font-family: 'PTSansRegular';
    font-weight: normal;
}

#block-delta-blocks-site-slogan{
	width: 100%;
	white-space: nowrap;
}
/*----------------------------------------------HEADER---------------------------------------------*/
/*---------------------------------------------BRANDING--------------------------------------------*/
tr:hover td, tr.even:hover td.active, tr.odd:hover td.active {
    background: none repeat scroll 0 0 #FFFEEE;
}

.page{
  background: url("/sites/all/themes/files/header_bg.jpg") repeat-x top center;	
}

#section-header {
    background: url("/sites/all/themes/files/header_hashtag.jpg") no-repeat scroll center top transparent;
}

h1.site-name, h2.site-name {
    font-size: 4.7em;
    font-weight: normal;
    letter-spacing: 1.29px;
}
.site-name a, .site-name a:active, .site-name a:link, .site-name a:hover {
    color: #FFFFFF;
    text-decoration: none;
}
.site-slogan, .block-menu {
    color: #FECD48;
    font-size: 1.7em;
    font-weight: normal;
    letter-spacing: 2px;
}
.site-slogan{
	font-size: 1.5em;
}
/*---------------------------------------------MAIN MENU-----------------------------------------*/
li.expanded, li.collapsed, li.leaf {
	padding: 0;
	margin: 0;
}
ul li.leaf {
    list-style-image: none;
    list-style-type: none;
}
/*#block-system-main-menu ul li.leaf {
	list-style-image: url('/sites/all/themes/files/active-menu-icon.png');
	list-style-type: none;
	padding: 0 10px 0;
	float: left;
}*/
#block-system-main-menu ul.menu {
    border: medium none;
    list-style: none outside none;
    padding: 47px 0 0 0px;
    text-align: left;
}
/*#block-system-main-menu .active-trail {
	list-style-image: url(/sites/all/themes/files/active-menu-icon.png);
	float: left;
	margin: 0;
}*/
#block-system-main-menu li a, #block-system-main-menu li a:link {
    color: #FECD48;
    font-family: 'LeagueGothicRegular';
    font-weight: normal;
    letter-spacing: 1px;
    text-decoration: none;
    text-transform: uppercase;
    float: left;
	padding: 0 20px 0 10px;
}
#block-system-main-menu li a.active,
#block-system-main-menu li a:hover {
    color: #FFF;
    font-weight: normal;
    letter-spacing: 1px;
    text-decoration: none;
    text-transform: uppercase;
}
.block-2 {
	font-size: 15px;
	margin-top: 0;
	padding: 20px 0;
	width: 100%;
	color: #3A3A3A;
}
/*-----------------------------------------NEWSLETTER FORM------------------------------------*/
.block-15 {
	float: left;
	width: 85%;
	margin: 0 0 0;
}
/*.block-32 {
	float: left;
	margin: 23px 0 0 0;
	padding: 0px;
	width: 100%;
}*/

.newsletter-wrapper {
	float: left;
	width: 100%;
	margin-top: 1.5em;
}

.newsletter-wrapper p {
	margin: 0;
	padding: 0;
}

.newsletter-text {
	float: left;
	margin: 0 10px 0 0;
	font-family: 'LeagueGothicRegular';
	font-size: 21px;
	letter-spacing: 1px;
	text-transform: uppercase;
	font-weight: normal;
}

#email-Primary {
	float: left;
	margin: 0;
	width: 50%;
}

.newsletter-email-submit-button {
	float: left;
	margin: 0
}
.newsletter-email-submit-button button,
.newsletter-email-submit-button input[type="reset"],
.newsletter-email-submit-button input[type="submit"],
.newsletter-email-submit-button input[type="button"] {
	-webkit-appearance: none;
	-moz-border-radius: 0;
	-webkit-border-radius: 0;
	-moz-background-clip: padding;
	-webkit-background-clip: padding;
	background: url('/sites/all/themes/files/newsletter-submit-button.png') no-repeat;
	border-radius: 0;
	background: url('/sites/all/themes/files/newsletter-submit-button.png') no-repeat;
	border: 0;
	border-color: 0;
	cursor: pointer;
	color: none;
	font: 0;
	outline: 0;
	overflow: none;
	padding: 20px 10px 0px;
	text-shadow: none;
	width: 0;
	font-size: 0;
	margin: 3px 0 0 5px;
}
#block-block-32 textarea, 
#block-block-32 select, 
#block-block-32 input[type="text"] {
	-webkit-appearance: none;
	-moz-border-radius: 0;
	-webkit-border-radius: 0;
	border-radius: 0;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	-moz-background-clip: padding;
	-webkit-background-clip: padding;
	background-clip: padding-box;
	background-color: white;
	border: 1px solid;
	color: black;
	outline: 0;
	padding: 2px 3px;
	font-size: 12px;
	font-family: Arial, sans-serif;
	height: 1.8em;
	border-color: #848484 #C1C1C1 #E1E1E1;
	width: 45%;
}

/*------------------------------------------SOCIAL ICONS---------------------------------------*/
.facebook-icon {
	padding: 0 10px 0 0;
}
/*------------------------------------------ANNOUNCEMENTS--------------------------------------*/
#block-block-12 {
	float: left;
	margin: 20px 0 0 0px;
}
#block-views-ows-announcements-block {
	float: left;
	margin: 0;
	padding: 0;
	border-top: 1px #A51D35 dashed;
}
.view-ows-announcements {
	color: #A51D35;
	float: left;
	font-size: 18px;
	font-weight: normal;
	letter-spacing: 1.5px;
	margin: 0;
	padding: 8px 0 0 0;
	text-transform: uppercase;
	line-height: 1.2em;
}

#block-views-ows-announcements-block a,
#block-views-ows-announcements-block a:link,
#block-views-ows-announcements-block a:visited{
	color: #A51D35;
	text-decoration: underline;
}
#block-views-ows-announcements-block a:hover{
	color:#000;
}

#block-views-ows-announcements-block .views-row-first {
	border-right: 1px solid;
	float: left;
	margin: 0;
	padding: 0;
	width: 47%;
	min-height: 65px;
	max-height: 65px;
}
/* ... */

